# SeaweedFSOperator

./: .drone.yml  Cargo.toml  Dockerfile  README.md  build.rs  build_docker_image.sh  renovate.json
docs/: SETUP_DEV.md  SETUP_PROD.md
manifests/: crd.yaml  prod-deployment.yaml  seaweedfs-dev-deployment.yaml
proto/: update_protos.sh
src/: crd.rs  k8s_operations.rs  k8s_secrets.rs  lib.rs  main.rs  protos.rs  seaweedfs_client.rs  seaweedfs_test_server.rs
tests/: anonymous-access.yaml  first-test-outside-cluster.yaml  mutliple-buckets-same-user.yaml
