[package]
name = "seaweedfs-k8s-operator"
version = "0.1.0"
edition = "2024"
license = "AGPL-3"

[dependencies]
tonic = "0.14.6"
prost = "0.14.4"
tonic-prost = "0.14.6"
tokio = { version = "1.52.3", features = ["full"] }
thiserror = "2.0.18"
tracing = "0.1.44"
serde = { version = "1.0.228", features = ["derive"] }
schemars = "1.2.1"
kube = { version = "4.0.0", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.28.0", features = ["v1_35"] }
serde_json = "1.0.150"
tracing-subscriber = "0.3.23"
futures = "0.3.32"
rand = "0.10.1"

[build-dependencies]
tonic-prost-build = "0.14.6"

[dev-dependencies]
temp-dir = "0.2.0"
rand = "0.10.1"
test-log = { version = "0.2.21", features = ["trace"] }
reqwest = "0.13.4"